<resources>
    <string name="app_name">WanderWise</string>
    <string name="city">City</string>
    <string name="trip">Trip</string>
    <string name="activity">Activity</string>
    <string name="add_new_trip">Add new trip</string>
    <string name="edit_existing_trips">Edit existing trips</string>
    <string name="trip_name">\t\t\t\t\tTrip Name</string>
    <string name="optional_description">\t\t\t\t\tOptional Description</string>
    <string name="submit">SUBMIT</string>
    <string name="hotel_inn">\t\t\t\t\tHotel / Inn</string>
    <string name="city_name">\t\t\t\t\tCity Name</string>
    <string name="brief_of_the_trip">\t\t\t\t\tBrief of the trip</string>
    <string name="enter_a_place_you_want_to_go_to">\t\t\t\t\t\t\t\t\t\tEnter a place you want to go to!</string>
    <string name="search_your_place">SEARCH YOUR PLACE</string>
    <string name="add_new_activity">Add new activity</string>
    <string name="trip_name_two_dots">Trip name:</string>
    <string name="from_two_dots">From:</string>
    <string name="to_two_dots">To:</string>
    <string name="duration_two_dots">Duration:</string>
    <string name="budget_two_dots">Budget:</string>
    <string name="a_landscape_from_the_trip">A landscape from the trip</string>
    <string name="hotel_inn_two_dots">Hotel/Inn:</string>
    <string name="add_your_stay">Add your stay</string>
    <string name="planning_two_dots">Planning:</string>
    <string name="days">days</string>

    <!-- Login Screen -->
    <string name="login_icon_description">Login Screen Icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>

    <!-- Sign Up Screen -->
    <string name="name">Name</string>

    <!-- Attraction Editing -->
    <string name="guideMe">Guide Me</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="attraction_name_hint">Search for your attraction</string>
    <string name="attraction_details">Attraction Details</string>
    <string name="attraction_visited_checkbox">Visited</string>
    <string name="from_date">DD/MM/YYYY</string>
    <string name="to_date">DD/MM/YYYY</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="permission_level">Permission Level</string>
    <string name="take_picture">Take picture</string>
    <string name="add_picture_from_gallery">Add picture from gallery</string>

    <string name="cityName">City Name:</string>

</resources>
