<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/DeepBlue">

    <EditText
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_a_place_you_want_to_go_to"
        android:autofillHints="text"
        android:inputType="text"
        android:background="@color/AquaBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"/>


    <ImageView
        android:id="@+id/icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/lupe_icon"
        android:contentDescription="@string/search_your_place"
        app:layout_constraintStart_toStartOf="@id/searchText"
        app:layout_constraintBottom_toBottomOf="@id/searchText"
        app:layout_constraintTop_toTopOf="@id/searchText"
        app:layout_constraintEnd_toEndOf="@+id/searchText"
        app:layout_constraintHorizontal_bias="0.05" />

    <Button
        android:id="@+id/listActivitiesBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_new_trip"
        android:background="@drawable/round_btn_list_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:rippleColor="@color/DarkerButtonBlue" />

</androidx.constraintlayout.widget.ConstraintLayout>