<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <ImageView
        android:id="@+id/imageTripIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon_login_screen"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/vertical_center"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/tripNameText"
        style="@style/EditTextStyle"
        android:hint="@string/trip_name"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_underline"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/imageTripIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/fromDate"
        style="@style/EditTextStyle"
        android:hint="@string/from_date"
        android:background="@drawable/edittext_underline"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tripNameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_center"
        android:layout_marginTop="16dp" />

    <!-- Add EditText for To Date -->
    <EditText
        android:id="@+id/toDate"
        style="@style/EditTextStyle"
        android:hint="@string/to_date"
        android:background="@drawable/edittext_underline"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tripNameText"
        app:layout_constraintStart_toEndOf="@+id/vertical_center"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/descriptionText"
        style="@style/EditTextStyle"
        android:hint="@string/optional_description"
        android:inputType="textMultiLine"
        android:background="@drawable/edittext_underline"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/fromDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Guideline for bottom alignment of buttons -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <ImageButton
        android:id="@+id/back_button"
        style="@style/CircularButtonStyle"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintEnd_toStartOf="@id/confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp" />

    <ImageButton
        android:id="@+id/confirm_button"
        style="@style/CircularButtonStyle"
        android:src="@drawable/verified"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
