<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/DeepBlue">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVert25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVert75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <ImageView
        android:id="@+id/imageLoginIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/login_icon_description"
        android:src="@drawable/icon_login_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintDimensionRatio="12:5"/>

    <EditText
        android:id="@+id/cityNameText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/city_name"
        android:autofillHints="text"
        android:inputType="text"
        android:background="@color/AquaBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLoginIcon"
        app:layout_constraintBottom_toTopOf="@+id/fromDate"
        app:layout_constraintVertical_bias="0.5"/>

    <EditText
        android:id="@+id/fromDate"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:inputType="date"
        android:background="@color/AquaBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/toDate"
        app:layout_constraintTop_toBottomOf="@+id/cityNameText"
        app:layout_constraintBottom_toTopOf="@+id/guideline60"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"/>

    <EditText
        android:id="@+id/toDate"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:inputType="date"
        android:background="@color/AquaBlue"
        app:layout_constraintStart_toEndOf="@id/fromDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityNameText"
        app:layout_constraintBottom_toTopOf="@+id/guideline60"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"/>

    <EditText
        android:id="@+id/hotelName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hotel_inn"
        android:autofillHints="text"
        android:inputType="text"
        android:background="@color/AquaBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:hint="@string/optional_description"
        android:inputType="text"
        android:background="@color/AquaBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotelName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:clickable="true"
        android:background="@color/ButtonBlue"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="@id/guidelineVert25"
        app:layout_constraintEnd_toEndOf="@id/guidelineVert75"
        app:layout_constraintTop_toBottomOf="@id/descriptionText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"
        app:rippleColor="@color/DarkerButtonBlue"/>
</androidx.constraintlayout.widget.ConstraintLayout>