<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/DeepBlue">

    <Button
        android:id="@+id/addActivityBtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_new_activity"
        android:background="@drawable/round_btn_plus_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:rippleColor="@color/DarkerButtonBlue" />

    <TextView
        android:id="@+id/hotelInnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel_inn_two_dots"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/addActivityBtn"
        app:layout_constraintBottom_toTopOf="@id/hotelBtnLayout"
        app:layout_constraintEnd_toEndOf="@id/hotelBtnLayout"
        app:layout_constraintStart_toStartOf="@id/hotelBtnLayout"
        app:layout_constraintHorizontal_bias="0.05" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hotelBtnLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/hotelInnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/hotelBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/hotel_btn_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/hotelIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/lupe_icon"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toTopOf="@id/hotelBtn"
            app:layout_constraintBottom_toBottomOf="@id/hotelBtn"
            app:layout_constraintEnd_toEndOf="@id/hotelBtn"
            app:layout_constraintStart_toStartOf="@id/hotelBtn"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            android:id="@+id/hotelBtnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_your_stay"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/hotelIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/planningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planning_two_dots"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/hotelBtnLayout"
        app:layout_constraintBottom_toTopOf="@id/attractionsListView"
        app:layout_constraintEnd_toEndOf="@id/attractionsListView"
        app:layout_constraintStart_toStartOf="@id/attractionsListView"
        app:layout_constraintHorizontal_bias="0.05" />

    <ListView
        android:id="@+id/attractionsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/planningText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/attraction_list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
